--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-native-fontawesome": "^0.3.0",
     "@react-native-async-storage/async-storage": "^1.17.4",
+    "@react-native-community/cli-platform-android": "^10.2.0",
     "@react-native-community/datetimepicker": "^6.1.3",
+   
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-firebase/app": "^14.9.3",
     "@react-native-firebase/auth": "^14.9.3",
@@ -25,7 +27,7 @@
     "@react-navigation/stack": "^6.2.1",
     "@reduxjs/toolkit": "^1.8.1",
     "axios": "^0.27.2",
-    "calend": "^0.1.3",
+   
     "firebase": "^9.6.11",
     "intl": "^1.2.5",
     "kalend": "^0.14.13",
@@ -45,6 +47,7 @@
     "react-native-screens": "^3.13.1",
     "react-native-scroll-menu": "^1.0.7",
     "react-native-side-menu": "^1.1.3",
+    "react-native-sliding-calendar-view": "^0.1.3",
     "react-native-splash-screen": "^3.3.0",
     "react-native-svg": "^12.3.0",
     "react-native-svg-transformer": "^1.0.0",
